tests/parser/ttypecommandindent1.nim
discard """
  errormsg: "invalid indentation"
  line: 9
  column: 3
"""

type
  Foo = call x, y, z:
  abc
